--- a/index.html
+++ b/index.html
@@ -28,10 +28,10 @@ layout: compress
 <body class="body">
 <div class="container">
     <header class="header">
-        <h1>CatsLinc Blog<span>吴磊的技术博客</span></h1>
+        <h1>IP问问<span>知识产权 Blog</span></h1>
         <nav class="links">
             <a href="https://www.linkedin.com/in/loi-wu-728b4969" target="_blank"><i class="fa fa-linkedin-square fa-3x"></i></a>
-            <a href="https://github.com/loiwu" target="_blank"><i class="fa fa-github-square fa-3x"></i></a>
+            <a href="https://github.com/ipwenwen" target="_blank"><i class="fa fa-github-square fa-3x"></i></a>
         </nav>
     </header>
     <div class="content">
